Enviando portfólio atualizado.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a class="menu" href="#galeria">Galeria</a></li>
                 <li><a class="menu" href="#habilidades">Habilidades</a></li>
                 <li><a class="menu" href="#contato">Contato</a></li>
+                <li><a class="menu" href="#projetos">Projetos</a></li>
                 <li><a class="menu" href="#" id="precos-btn">Preços</a></li>
             </ul>
         </nav>
@@ -184,19 +185,19 @@
                             <div class="skill-item">
                                 <span class="skill-name">Adobe Photoshop</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="90%"></div>
+                                    <div class="skill-progress" data-width="70%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <span class="skill-name">Adobe Illustrator</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="85%"></div>
+                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <span class="skill-name">HTML/CSS</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="80%"></div>
+                                    <div class="skill-progress" data-width="60%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -323,7 +324,7 @@
                 <div class="projetos-grid">
                     <div class="projeto-card">
                         <div class="projeto-image">
-                            <div class="projeto-placeholder">
+                            <div class="projeto-placeholder" style="background-image: url('./assets/Surgiu.png')">
                                 <span>BigBite Project</span>
                             </div>
                         </div>
@@ -336,6 +337,27 @@
                                 <span class="tag">UX/UI</span>
                             </div>
                             <a href="https://joyttape.github.io/BigBite_ADS_JP/" class="projeto-link" target="_blank">Ver Projeto</a>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="projetos-grid">
+                    <div class="projeto-card">
+                        <div class="projeto-image">
+                            <div class="projeto-placeholder">
+                                <span>Claustromania</span>
+                            </div>
+                        </div>
+                        <div class="projeto-content">
+                            <h3>Sistema de Gestão Escape Rooms</h3>
+                            <p>Desenvolvimento de um sistema web para gestão da Claustromania.</p>
+                            <div class="projeto-tags">
+                                <span class="tag">HTML/CSS</span>
+                                <span class="tag">JavaScript</span>
+                                <span class="tag">Vue</span>
+                            </div>
+                            <a href="https://github.com/joyttape/Claustromania/tree/backup" class="projeto-link" target="_blank">Ver Projeto</a>
                         </div>
                     </div>
                     
